fixed overlapping search bar

--- a/react-app/src/components/auth/LoginForm/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm/LoginForm.css
@@ -1,4 +1,7 @@
-
+.loginModalWrapper {
+    position: absolute;
+    z-index: 5;
+}
 
 .LoginModalContainer{
     background-color: #fff;
